force-app/main/default/objects/Brand_Experience_Variation_Member_Guest__c/Brand_Experience_Variation_Member_Guest__c.object-meta.xml
<CustomObject>
    <label>Activation Member’s Guest</label>
    <nameField>
        <label>Activation Member’s Guest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activation Member’s Guests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>