force-app/main/default/objects/Brand_Experience_Variation_Member_Guest__c/fields/Brand_Experience_Variation_Member__c.field-meta.xml
<CustomField>
    <fullName>Brand_Experience_Variation_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activation Member</label>
    <referenceTo>Brand_Experience_Variation_Member__c</referenceTo>
    <relationshipLabel>Activation Member’s Guests</relationshipLabel>
    <relationshipName>Activation_Member_s_Guests</relationshipName>
    <type>Lookup</type>
</CustomField>