force-app/main/default/objects/Brand_Experience_Variation_Member_Guest__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Husband/Wife</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>