force-app/main/default/objects/Brand_Experience_Variation_Member_Guest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Registered&apos;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Removed Manually</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>Not Participated</fullName>
            </value>
            <value>
                <fullName>Participated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>