force-app/main/default/objects/Brand_Experience_Variation_Member_Guest__c/validationRules/Adding_Guests_Limitations.validationRule-meta.xml
<ValidationRule>
    <fullName>Adding_Guests_Limitations</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(ISNEW(),
Brand_Experience_Variation_Member__r.Brand_Experience_Variation__r.Brand_Experience__r.RecordType.DeveloperName=&apos;Experience&apos;, 
Brand_Experience_Variation_Member__r.Brand_Experience_Variation__r.RecordType.DeveloperName =&apos;Physical_Event&apos;,
Brand_Experience_Variation_Member__r.Brand_Experience_Variation__r.Guests_Authorized__c,
(ISPICKVAL(Brand_Experience_Variation_Member__r.rsvpState__c, &apos;Not Registered&apos;)|| ISPICKVAL(Brand_Experience_Variation_Member__r.rsvpState__c, &apos;Declined&apos;)|| 
ISPICKVAL(Brand_Experience_Variation_Member__r.rsvpState__c, &apos;Removed&apos;))
)</errorConditionFormula>
    <errorMessage>Client registration must be &apos;Confirmed&apos; before adding his guests</errorMessage>
</ValidationRule>