force-app/main/default/objects/Brand_Experience_Variation_Member_Guest__c/validationRules/Editing_Guests_Limitations.validationRule-meta.xml
<ValidationRule>
    <fullName>Editing_Guests_Limitations</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Brand_Experience_Variation_Member__r.Brand_Experience_Variation__r.Status__c , &apos;Ended&apos;) &amp;&amp; ISCHANGED(Relationship__c)</errorConditionFormula>
    <errorMessage>Once the experience activation is ended, Editing the Guest is impossible</errorMessage>
</ValidationRule>